kubernetes/apps/home/go2rtc/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: go2rtc Video Streaming Service
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/icon: go2rtc
    gethomepage.dev/name: Go2RTC
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=go2rtc"
spec:
  hostnames:
    - "go2rtc.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: home
          port: ${APP_PORT}
